--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>T-luna | Food</title>
+  <title>Internship Buddy</title>
   <style>
     * {
       font-family: 'Noto Sans KR', sans-serif;
